@@ -1,4 +1,8 @@
-﻿shmuel 07.07.2014 15:48:17 +0200 - build 395
+﻿shmuel 08.07.2014 16:11:57 +0200 - build 396
+
+1. Уточнение 389.2 : была ошибка при запуске Far /w /e <filename>.
+
+shmuel 07.07.2014 15:48:17 +0200 - build 395
 
 1. Уточнение 389.2 : ошибка при исполнении функции text() одного пункта меню
    приводила к тому, что и остальные пункты меню плагина не загружались.
